added image preview feature

--- a/RealEstateAgency.Core/Resources/UILabel.RO.resx
+++ b/RealEstateAgency.Core/Resources/UILabel.RO.resx
@@ -539,7 +539,7 @@
     <value>Camere de baie</value>
   </data>
   <data name="Browse" xml:space="preserve">
-    <value>Navigează</value>
+    <value>Caută</value>
   </data>
   <data name="BuildingPlan" xml:space="preserve">
     <value>Plan de construcție</value>
