--- a/RealEstateAgency.Core/Resources/UILabel.RU.resx
+++ b/RealEstateAgency.Core/Resources/UILabel.RU.resx
@@ -539,7 +539,7 @@
     <value>Ванные комнаты</value>
   </data>
   <data name="Browse" xml:space="preserve">
-    <value>Просматривать</value>
+    <value>Поиск</value>
   </data>
   <data name="BuildingPlan" xml:space="preserve">
     <value>План здания</value>
