added unit tests for services and buildingplan controller

--- a/RealEstateAgency.Core/Resources/UILabel.RO.resx
+++ b/RealEstateAgency.Core/Resources/UILabel.RO.resx
@@ -151,7 +151,7 @@
     <value>Link de confirmare pentru a schimba e -mailul trimis. Vă rugăm să verificați email-ul.</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
-    <value>Tablou de bord</value>
+    <value>Bord de administrare</value>
   </data>
   <data name="Delete" xml:space="preserve">
     <value>Șterge</value>
